[package]
name = "yellowstone-grpc-bench"
version = "0.1.0"
authors = ["Triton One"]
edition = "2021"
description = "Benchmarking tool for comparing Solana node performance via Yellowstone gRPC"
license = "Apache-2.0"
resolver = "2"
publish = false

[dependencies]
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "sync"] }
yellowstone-grpc-client = "6.1.0"
yellowstone-grpc-proto = "6.1.0"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
humantime-serde = "1.1.1"
toml = "0.8.23"

[patch.crates-io]
yellowstone-grpc-client = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v7.0.0+solana.2.2.15" }
yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v7.0.0+solana.2.2.15" }
