[package]
name = "yellowstone-grpc-bench"
version = "0.1.0"
authors = ["Triton One"]
edition = "2024"
description = "Benchmarking tool for comparing Solana node performance via Yellowstone gRPC"
license = "Apache-2.0"
resolver = "2"
publish = false

[[bin]]
name = "test-grpc"
path = "src/bin/test_grpc.rs"

[[bin]]
name = "grpc-bench"
path = "src/bin/grpc_bench.rs"

[dependencies]
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "sync"] }
yellowstone-grpc-client = "6.1.0"
yellowstone-grpc-proto = "6.1.0"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
humantime-serde = "1.1.1"
toml = "0.8.23"
clap = { version = "4.5.40", features = ["derive"] }
# Using `anyhow` for error handling in tests only
anyhow = "1.0.98"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
richat-client = "3.5.0"
tonic = "0.12.3"
richat-proto = "3.1.0"

[lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"
