[package]
name = "yellowstone-thorofare"
version = "0.4.0"
authors = ["Triton One"]
edition = "2024"
description = "Benchmarking tool for comparing Solana nodes and Geyser Plugins (currently only gRPC protocol)"
license = "Apache-2.0"
resolver = "2"
publish = false

[[bin]]
name = "thorofare"
path = "src/bin/thorofare.rs"

[dependencies]
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "sync"] }
yellowstone-grpc-client = "12.2.0"
yellowstone-grpc-proto = "12.1.0"
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
solana-pubkey = "3.0.0"
solana-signature = "3.3.0"
humantime-serde = "1.1.1"
toml = "0.9.8"
clap = { version = "4.6.0", features = ["derive"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
richat-client = "8.1.1"
tonic = "0.14.5"
richat-proto = "8.0.0"

[lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"
